# CacheMerging-MMLLM

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
evaluation/: aggregate_scores.py  evaluate.py  generate.py  generate_with_summary.py  utils.py
evaluation/configs/: accelerate_configs.yaml  model_configs.yaml
evaluation/workers/: model_workers.py
notebooks/: cam_development.py  minigpt4_milebench_eval.py  minigpt4_poc.py
scripts/: eval.sh  explore_dataset.py
src/cache_merging/: __init__.py  cam_attention.py  descriptive_generation.py
